--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lt.nerijus</groupId>
-    <artifactId>fame.lt</artifactId>
+    <artifactId>lt-Tests Automation</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
